syntax = "proto3";
option go_package = "./proto";
package proto;


service VoteService {
  rpc Vote (VoteRequest) returns (VoteReply) {}
}

message VoteRequest {
  string id = 1;
  string civicCredential = 2;
  string department = 3;
  string circuit = 4;
  string candidate = 5;
  string politicalParty = 6;
}

message VoteReply {
  string message = 1;
}

// TODO
//Execute this command to create .pb files
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/voteService/voter.proto